# macOS-pointer-designer

./: .dockerignore  .gitignore  AGENTS.md  ANCHOR.md  CLAUDE.md  Makefile  NORTH_STAR.md  Package.swift  README.md  docker-compose.yml
.github/workflows/: ci.yml
Casks/: cursor-designer-osx.rb  pointer-designer.rb
Scripts/: create-dmg.sh
Sources/PointerDesigner/: AppDelegate.swift  MenuBarController.swift  PreferencesWindowController.swift  main.swift
Sources/PointerDesignerCore/: BackgroundColorDetector.swift  CursorEngine.swift  CursorRenderer.swift  CursorSettings.swift  CursorStateController.swift  DisplayManager.swift  HelperToolManager.swift  LaunchAtLoginManager.swift  MenuBarIconGenerator.swift  PermissionManager.swift  SettingsManager.swift  SystemIntegrationManager.swift
Sources/PointerDesignerHelper/: main.swift
Tests/PointerDesignerTests/: BackgroundColorDetectorTests.swift  (+4 more)
docs/: architecture.md
ops/: analytics.md  deploy.md
scripts/: check-app-ui-contract.sh  check-compatibility-boundary.sh  check-distribution-boundary.sh  check-local-first.sh  check-monorepo-references.sh  check-website-boundary.sh
site/: .env.example  Cargo.toml  Trunk.toml  index.html  verify.sh
site/public/: robots.txt
site/src/: analytics.rs  main.rs  routes.rs
site/src/components/: button.rs  card.rs  icons.rs  liquid_background.rs  mod.rs  value_section.rs
site/src/content/: changelog.md  faq.md
site/src/pages/: accessibility.rs  changelog.rs  download.rs  home.rs  mod.rs  not_found.rs  terms.rs
site/styles/: base.css  components.css  layout.css
(+125 files in other folders)
