[package]
name = "windowdrop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "windowdrop"
path = "src/main.rs"

[[bin]]
name = "windowdrop-server"
path = "src/bin/server.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
chrono = "0.4"
console_error_panic_hook = "0.1"
pulldown-cmark = "0.9"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "HtmlInputElement", "Node", "DomTokenList", "MediaQueryList", "console"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

# Server dependencies
axum = { version = "0.7", features = ["http1", "macros", "tokio"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.5", features = ["fs", "trace", "compression-full", "set-header"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
ssr = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber"]


[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
